# crudzoo-mypage-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  main.rs  sqlx-data.json
.github/workflows/: main.yaml
api/: Cargo.toml
api-axum/: Cargo.toml
api-axum/configuration/: base.yaml
api-axum/src/: configuration.rs  lib.rs  main.rs
api-axum/src/auth/: claims.rs  jwt.rs
api-axum/src/routes/: iteration.rs  mod.rs  payment.rs
api/configuration/: base.yaml
api/src/: configuration.rs  container.rs  lib.rs  main.rs  startup.rs
api/src/adaptor/: payment.rs  user.rs
api/src/auth/: claims.rs  jwt.rs
api/src/routes/: book.rs  daily_condition.rs  health_check.rs  mod.rs  payment.rs  user.rs
api/tests/api/: helpers.rs  main.rs  payment.rs
core/src/: lib.rs
domain/: Cargo.toml
domain/src/: errors.rs  lib.rs  main.rs
domain/src/entity/: book.rs  iteration.rs  mod.rs  payment.rs  payment_type.rs  user.rs
domain/src/interface/: book.rs  daily_condition.rs  db.rs  iteration.rs  mod.rs  payment.rs  user.rs
domain/src/usecase/: book.rs  daily_condition.rs  iteration.rs  mod.rs  payment.rs  user.rs
environment/: init_db.sh  skaffold.yaml
environment/k8s/: deployment.yaml  service.yaml
infra/: Cargo.toml  sqlx-data.json
infra/src/: book.rs  db.rs  lib.rs  main.rs  payment.rs  user.rs
infra/src/driver/: book.rs  daily_condition.rs  iteration.rs  mod.rs  payment.rs
infra/src/gateway/: book.rs  daily_condition.rs  iteration.rs  mod.rs  payment.rs
migrations/: 20220309133703_sample-table.sql  20220314114923_create_payment.sql  20220314115211_add_payment_type.sql  20220502152239_create_book.sql  20220616124515_create_daily_condition.sql  20220827155214_iteration.sql
src/: configuration.rs  lib.rs
src/auth/: jwt.rs
tests/api/: helpers.rs  main.rs  payment.rs
