[package]
name = "crudzoo-mypage-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
chrono = "0.4.19"
dotenv = "0.15.0"
envy = "0.4.2"
jsonwebtoken = "8.0.1"
serde = {version = "1.0", features = ["derive"] }
