[package]
name = "api-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = {path = "../domain" }
infra = {path = "../infra"}
async-trait = "0.1.52"
axum = { version = "0.5.11", features = ["headers"] }
chrono = "0.4.19"
config = "0.11.0"
headers = "0.3"
jsonwebtoken = "8.0"
once_cell = "1.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "3.0.1"
sqlx = {version = "0.5.11", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }