[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = {path = "../domain" }
infra = {path = "../infra"}
actix-cors = "0.6.1"
actix-web = "4.0.1"
async-trait = "0.1.52"
chrono = "0.4.19"
config = "0.11.0"
jsonwebtoken = "8.0.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies", "blocking"] }
serde = {version = "1.0", features = ["derive"] }
serde-aux = "3.0.1"
sqlx = {version = "0.5.11", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
thiserror = "1.0.30"
tracing-actix-web = "0.5.1"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2"}
[dev-dependencies]
tokio = { version = "1", features = ["full"] }