[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.52"
mockall = "0.11.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.31"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
chrono = { version="0.4.19", features=["serde"]}
[dev-dependencies]
tokio = {version="1.17.0", features = ["macros", "rt-multi-thread"]}
faux = "^0.1"
                                                                                