[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = {path = "../domain" }
async-trait = "0.1.52"
sqlx = {version = "0.5.11", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
chrono = "0.4.19"
mockall = "0.11.0"
serde = {version = "1.0", features = ["derive"] }
thiserror="1"

[dev-dependencies]
tokio = {version="1.17.0", features = ["macros", "rt-multi-thread"]}